# blockhead_generators

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
classic/: CMakeLists.txt
classic/src/: audio.cpp  audio.h  gui.cpp  gui.h  plugin.cpp  plugin.h
effects/: CMakeLists.txt
effects/compressor/: CMakeLists.txt
effects/compressor/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  convert.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/compressor/src/parameters/: attack.hpp  knee.hpp  mix.hpp  processing_mode.hpp  ratio.hpp  release.hpp  threshold.hpp
effects/delay/: CMakeLists.txt
effects/delay/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  instance.cpp  instance.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/echo/: CMakeLists.txt
effects/echo/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  instance.cpp  instance.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/echo/src/parameters/: amp.hpp  feedback.hpp  time.hpp
effects/filter/: CMakeLists.txt
effects/filter/src/: audio.cpp  audio.h  plugin.cpp  plugin.h
effects/filter_bandpass/: CMakeLists.txt
effects/filter_bandpass/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/filter_highpass/: CMakeLists.txt
effects/filter_highpass/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/filter_lowpass/: CMakeLists.txt
effects/filter_lowpass/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/freeze/: CMakeLists.txt
effects/freeze/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  buffer.h  controller.cpp  controller.h  dsp.hpp  grain.h  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  particle.cpp  particle.h  plugin.cpp  plugin.h
effects/gainer/: CMakeLists.txt
effects/gainer/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/gainer/src/parameters/: amp.hpp  pan.hpp
effects/lofi/: CMakeLists.txt
effects/lofi/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/lofi/src/parameters/: bit_reduction.hpp  sample_rate.hpp
effects/rattler/: CMakeLists.txt
effects/rattler/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/rattler/src/parameters/: amp.hpp  dry.hpp  feedback.hpp  time.hpp  wet.hpp  width.hpp
effects/resonator/: CMakeLists.txt
effects/resonator/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  convert.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/resonator/src/parameters/: damper.hpp  feedback.hpp  fm_amount.hpp  fm_ratio.hpp  harmonics_amount.hpp  harmonics_scale.hpp  harmonics_scale_snap_amount.hpp  harmonics_spread.hpp  harmonics_width.hpp  mix.hpp  pitch.hpp
effects/ring_modulator/: CMakeLists.txt
effects/ring_modulator/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/saturator/: CMakeLists.txt
effects/saturator/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/saturator/src/parameters/: amp.hpp  (+2 more)
effects/splatter/: CMakeLists.txt
effects/splatter/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  instance.cpp  instance.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/spring_reverb/: CMakeLists.txt
effects/spring_reverb/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/template/: CMakeLists.txt
effects/template/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/tract/: CMakeLists.txt
effects/tract/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/wavebender/: CMakeLists.txt
effects/wavebender/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
effects/zap/: CMakeLists.txt
effects/zap/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
samplers/classic/: CMakeLists.txt
samplers/classic/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  draw.hpp  dsp.hpp  gui.cpp  gui.h  instance.cpp  instance.h  manipulator_targets.cpp  manipulator_targets.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
samplers/fudge/: CMakeLists.txt
samplers/fudge/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  autocorrelation.h  controller.cpp  controller.h  convert.h  draw.hpp  dsp.hpp  grain.h  gui.cpp  gui.h  instance.cpp  instance.h  limits.h  model.h  parameters.cpp  parameters.h  particle.cpp  particle.h  plugin.cpp  plugin.h  samnple_analysis.cpp  sample_analysis.cpp  sample_analysis.h
samplers/wavetable/: CMakeLists.txt
samplers/wavetable/src/: audio.cpp  audio.h  audio_data.h  gui.cpp  gui.h  parameters.cpp  parameters.h  particle.h  plugin.cpp  plugin.h  sample_analysis.cpp  sample_analysis.h
synths/test/: CMakeLists.txt
synths/test/src/: audio.cpp  audio.h  audio_data.cpp  audio_data.h  dsp.hpp  instance.cpp  instance.h  model.h  parameters.cpp  parameters.h  plugin.cpp  plugin.h
(+105 files in other folders)
